<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_chat_frag"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        tools:visibility="visible">

        <RelativeLayout
            android:id="@+id/compose_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/chat_compose_border"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp">

                <ImageView
                    android:id="@+id/iv_link_pic"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/view_separator"
                    app:layout_constraintStart_toStartOf="@+id/et_new_message"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_public_black_24dp" />

                <TextView
                    android:id="@+id/tv_link_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginBottom="8dp"
                    android:maxLines="2"
                    app:layout_constraintBottom_toTopOf="@+id/view_separator"
                    app:layout_constraintStart_toEndOf="@+id/iv_link_pic"
                    tools:text="link desc goes here" />

                <TextView
                    android:id="@+id/tv_link_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/tv_link_desc"
                    app:layout_constraintEnd_toStartOf="@+id/iv_link_cancel"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_link_desc"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Link Title" />

                <ImageView
                    android:id="@+id/iv_link_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_link_desc"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close_black_24dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_user_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/et_new_message"
                    tools:listitem="@layout/item_user_tag"
                    tools:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progress_bar_tagging"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/rv_user_tag"
                    app:layout_constraintStart_toStartOf="@id/rv_user_tag"
                    app:layout_constraintTop_toTopOf="@id/rv_user_tag"
                    tools:visibility="gone" />

                <View
                    android:id="@+id/view_separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="16dp"
                    android:background="@color/light_gray"
                    app:layout_constraintBottom_toTopOf="@+id/barrier_link" />

                <ImageView
                    android:id="@+id/iv_send_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/blue_circle"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_send_white_24dp" />

                <ProgressBar
                    android:id="@+id/progress_bar_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/blue_circle"
                    android:theme="@style/AppTheme.WhiteAccent"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageView
                    android:id="@+id/iv_attach"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/iv_media_attach"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:foreground="?attr/selectableItemBackground"
                    app:layout_constraintEnd_toStartOf="@+id/iv_media_attach"
                    app:tint="@color/md_grey_600"
                    app:layout_constraintTop_toTopOf="@+id/iv_send_btn"
                    app:srcCompat="@drawable/ic_attach_file_black_24dp" />

                <ImageView
                    android:id="@+id/iv_media_attach"
                    android:layout_width="40dp"
                    android:layout_height="0dp"
                    android:layout_marginLeft="4dp"
                    android:padding="8dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:layout_toStartOf="@id/iv_send_btn"
                    android:foreground="?attr/selectableItemBackground"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_send_btn"
                    app:layout_constraintTop_toTopOf="@+id/iv_send_btn"
                    app:tint="@color/md_grey_600"
                    app:srcCompat="@drawable/ic_camera_alt_white_24dp" />

                <EditText
                    android:id="@+id/et_new_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@android:color/transparent"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="top|left"
                    android:hint="Send message"
                    android:inputType="text|textCapSentences|textMultiLine"
                    android:maxLines="6"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/iv_attach"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/barrier"
                    tools:text="iuyds" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierAllowsGoneWidgets="false"
                    app:barrierDirection="top"
                    app:constraint_referenced_ids="iv_send_btn, view_separator"
                    tools:layout_editor_absoluteY="55dp" />


                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier_link"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:barrierAllowsGoneWidgets="false"
                    app:barrierDirection="top"
                    app:constraint_referenced_ids="iv_send_btn, et_new_message"
                    tools:layout_editor_absoluteY="55dp" />

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/group_link_meta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:constraint_referenced_ids="tv_link_desc,view_separator,tv_link_title,iv_link_cancel,iv_link_pic"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout_join_container"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_decline_cross"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                app:tint="@color/white"
                app:srcCompat="@drawable/ic_close_black_24dp" />

            <Button
                android:id="@+id/btn_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="right"
                android:text="JOIN"
                android:theme="@style/WhiteButton" />

            <TextView
                android:id="@+id/tv_join_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:layout_toLeftOf="@id/btn_join"
                android:layout_toRightOf="@id/iv_decline_cross"
                android:textColor="@color/white"
                tools:text="You were invited by Ashish Gadha" />

        </RelativeLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <ProgressBar
        android:id="@+id/progressbar_pagination"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="8dp"
        android:visibility="gone" />

    <include
        android:id="@+id/view_pvt_sys_msg"
        layout="@layout/item_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_container"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/typing_tv"
        android:layout_below="@id/progressbar_pagination"
        android:layout_marginBottom="4dp"
        android:visibility="invisible"
        tools:listitem="@layout/item_recvd_chat"
        tools:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_typing"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_container"
        android:layout_alignTop="@id/typing_tv"
        android:layout_marginLeft="8dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/typing_anim_grey"
        app:tint="@color/orange"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/typing_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_container"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/anim_typing"
        android:visibility="gone"
        tools:text="Pika, Bulba typing"
        tools:visibility="visible" />

</RelativeLayout>