...
        android:paddingLeft="-12dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:paddingStart="-12dp" />

    <com.cooltechworks.views.shimmer.ShimmerRecyclerView
        android:id="@+id/rv_groups"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:shimmer_demo_grid_child_count="7"
        app:shimmer_demo_layout="@layout/layout_demo_shimmer_simple"
...
